# mdvector

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  speed.result  test.sh  test.txt
cmake/: CompilerOption.cmake  DetectSIMD.cmake  PlatformSetting.cmake  SelectSimd.cmake
src/: CMakeLists.txt  aligned_allocator.h  check_simd.h  mdarray.h  mdvector.h  ndarray.h
src/avx2/: Allocator.h  BaseExpr.h  SimdConfig.h  expr_template.h  function.h  mdvector.h  operator.h  simd_config.h
src/avx2_expr/: allocator.h  function.h  mdvector.h  simd_config.h
src/back/: test_type.h
src/back/mdvector/: allocator.h  deepseek copy.h  deepseek.h  mdvector.h
src/back/ndarray/: allocator.h  demo.cc  mdvector.h  ndarray.h
src/base_expr/: base_expr.cc
src/blas/: function.h
src/expression_template/: calculation_expr.h  operator.h  scalar_expr.h  tensor_expr.h
src/header/: all.h  allocator.h  avx2.h  expr.h  intel_mkl.h  mdvector.hpp  normal.h  test_1d.cc  test_2d copy.cc  time_cost.h
src/highway/: function.h
src/map/: map_eigen.h
src/mdvector/: aligned_allocator.h  expr.h  mask.h  mdvector.h
src/mdvector/allocator/: aligned_allocator.h  allocator.h
src/mdvector/engine/: md_engine.h
src/mdvector/exper_template/: base_expr.h  calculation_expr.h  expr.h  operator.h  scalar_expr.h  tensor_expr.h
src/mdvector/simd/: arm_neon.h  base.h  risc_v.h  simd.h  simd_base.h  simd_function.h  x86_avx2.h  x86_avx512.h  x86_sse.h
src/mdvector/span/: detail.h  mdspan.h  subspan.h  subview.h
src/mkl/: intel_mkl.h
src/multi_dimension/: detail.h  engine_dynamic.h  engine_static.h  mdspan.h  span.h  subspan.h  subview.h  view.h
src/other_method/base_expr/: base_expr.h
src/other_method/highway/: function.h
src/simd/: allocator.h  arm_neon.h  none.h  risc_v.h  simd.h  simd_base.h  simd_function.h  x86_avx2.h  x86_avx512.h  x86_sse.h
src/test/: CMakeLists.txt  avx2.cc  dynamic_cache.h  eigen.cc  mdvector_expr.cc  mdvector_fun.cc  norm.cc  test.cc  test_1d.cc  test_2d copy.cc  test_2d.cc  test_2d_scalar.cc  test_set.h  vector.cc
src/test/correct/: CMakeLists.txt  scalar.cc  subspan.cc  test.cc  test_base.cc  test_subspan.cc
src/test/single/: CMakeLists.txt  avx2.cc  eigen.cc  mdvector_expr.cc  mdvector_fun.cc  norm.cc  vector.cc  xarray.cc  xtensor.cc
src/test/speed/: CMakeLists.txt
src/test/speed/2d/: test_2d.cc  test_set.h  time_cost.h
src/test/speed/3d/: test_3d.cc  test_set.h  time_cost.h
test/: CMakeLists.txt
test/correct/: CMakeLists.txt  test_base.cc  test_layout.cc  test_math.cc  test_scalar.cc  test_span.cc  test_stl.cc  test_subspan.cc
test/speed/: CMakeLists.txt
test/speed/2d/: test_2d.cc  test_set.h  time_cost.h
test/speed/3d/: test_3d.cc  test_set.h  time_cost.h
